--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,218 @@
-apturl==0.5.2
-attrs==19.3.0
-bcrypt==3.1.7
-blinker==1.4
-Brlapi==0.7.0
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-cloud-init==23.3.1
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-distlib==0.3.8
-distro==1.4.0
-distro-info==0.23+ubuntu1.1
-duplicity==0.8.12.0
-entrypoints==0.3
-fail2ban==0.11.1
-fasteners==0.14.1
+aiohttp==3.9.1
+aiosignal==1.3.1
+altair==5.2.0
+annotated-types==0.6.0
+antlr4-python3-runtime==4.9.3
+anyio==4.2.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==23.2.0
+backcall==0.2.0
+backoff==2.2.1
+beautifulsoup4==4.12.3
+blinker==1.7.0
+cachetools==5.3.2
+certifi==2024.2.2
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+cmake==3.28.1
+coloredlogs==15.0.1
+comm==0.2.1
+contourpy==1.2.0
+cryptography==42.0.2
+cycler==0.12.1
+dataclasses-json==0.6.4
+dataclasses-json-speakeasy==0.5.11
+debugpy==1.8.1
+decorator==5.1.1
+Deprecated==1.2.14
+distro==1.9.0
+effdet==0.4.1
+emoji==2.10.1
+entrypoints==0.4
+environs==9.5.0
+exceptiongroup==1.2.0
+executing==2.0.1
+faiss-gpu==1.7.2
 filelock==3.13.1
-future==0.18.2
-httplib2==0.14.0
-idna==2.8
-importlib-metadata==1.5.0
-iotop==0.6
-Jinja2==2.10.1
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==1.1.0
-monotonic==1.5
-more-itertools==4.2.0
-netifaces==0.10.4
-nvsm==23.6.4
-nvsm-dshm==23.6.4
-nvsm-health==23.6.4
-nvsm-sdk==1.0.0
-oauthlib==3.1.0
-olefile==0.46
-paho-mqtt==1.5.0
-paramiko==2.6.0
-pexpect==4.6.0
-Pillow==7.0.0
-platformdirs==4.1.0
-protobuf==3.6.1
-psutil==5.5.1
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyRFC3339==1.1
-pyrsistent==0.15.5
-pyserial==3.4
-python-apt==2.0.1+ubuntu0.20.4.1
-python-dateutil==2.7.3
-python-debian==0.1.36+ubuntu1.1
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
-requests==2.22.0
-requests-unixsocket==0.2.0
-screen-resolution-extra==0.0.0
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.14.0
-sos==4.5.6
-ssh-import-id==5.10
-systemd-python==234
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-urllib3==1.25.8
-usb-creator==0.3.7
-virtualenv==20.25.0
-wadllib==1.3.3
-xkit==0.0.0
-zipp==1.0.0
+filetype==1.2.0
+flatbuffers==23.5.26
+fonttools==4.49.0
+frozenlist==1.4.1
+fsspec==2024.2.0
+gitdb==4.0.11
+GitPython==3.1.41
+greenlet==3.0.3
+grpcio==1.60.0
+h11==0.14.0
+httpcore==1.0.4
+httpx==0.27.0
+huggingface-hub==0.20.3
+humanfriendly==10.0
+idna==3.6
+importlib-metadata==7.0.1
+importlib-resources==6.1.1
+iopath==0.1.10
+ipykernel==6.21.1
+ipython==8.22.2
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.3.2
+jsonpatch==1.33
+jsonpath-python==1.0.6
+jsonpointer==2.4
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
+jupyter-client==7.2.0
+jupyter_core==5.7.1
+kiwisolver==1.4.5
+kobert-tokenizer @ git+https://github.com/SKTBrain/KoBERT.git@47a69af87928fc24e20f571fe10c3cc9dd9af9a3#subdirectory=kobert_hf
+langchain==0.1.0
+langchain-community==0.0.12
+langchain-core==0.1.10
+langdetect==1.0.9
+langsmith==0.0.80
+layoutparser==0.3.4
+lightning-utilities==0.10.0
+lit==17.0.6
+llvmlite==0.41.1
+lxml==5.1.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.20.2
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+minio==7.2.5
+mpmath==1.3.0
+multidict==6.0.4
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.2.1
+nltk==3.8.1
+numba==0.58.1
+numpy==1.26.4
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu11==10.9.0.58
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu11==10.2.10.91
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu11==2.14.3
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.99
+nvidia-nvtx-cu11==11.7.91
+nvidia-nvtx-cu12==12.1.105
+omegaconf==2.3.0
+onnx==1.15.0
+onnxruntime==1.15.1
+openai==1.13.3
+opencv-python==4.8.0.76
+packaging==23.2
+pandas==2.2.0
+parso==0.8.3
+pdf2image==1.17.0
+pdfminer.six==20221105
+pdfplumber==0.10.4
+pexpect==4.9.0
+pickleshare==0.7.5
+pikepdf==8.11.0
+pillow==10.2.0
+pillow_heif==0.15.0
+platformdirs==4.2.0
+portalocker==2.8.2
+prompt-toolkit==3.0.43
+protobuf==4.23.4
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==14.0.2
+pycocotools==2.0.7
+pycparser==2.21
+pycryptodome==3.20.0
+pydantic==2.5.3
+pydantic_core==2.14.6
+pydeck==0.8.1b0
+Pygments==2.17.2
+pymilvus==2.3.6
+pynndescent==0.5.11
+pyparsing==3.0.9
+pypdf==4.0.1
+pypdfium2==4.27.0
+pytesseract==0.3.10
+python-dateutil==2.8.2
+python-docx==1.1.0
+python-dotenv==1.0.1
+python-iso639==2024.2.7
+python-magic==0.4.27
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==19.0.2
+rapidfuzz==3.6.1
+referencing==0.32.1
+regex==2023.12.25
+requests==2.31.0
+rich==13.7.0
+rpds-py==0.17.1
+safetensors==0.3.2
+scikit-learn==1.3.2
+scipy==1.10.1
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+soupsieve==2.5
+SQLAlchemy==2.0.25
+stack-data==0.6.3
+streamlit==1.30.0
+sympy==1.12
+tabulate==0.9.0
+tenacity==8.2.3
+threadpoolctl==3.2.0
+timm==0.9.12
+tokenizers==0.15.2
+toml==0.10.2
+toolz==0.12.0
+torch==2.2.0
+torchmetrics==1.3.0.post0
+torchvision==0.17.0
+tornado==6.4
+tqdm==4.66.2
+traitlets==5.14.1
+transformers==4.37.1
+triton==2.2.0
+typing-inspect==0.9.0
+typing_extensions==4.9.0
+tzdata==2024.1
+tzlocal==5.2
+ujson==5.9.0
+umap-learn==0.5.5
+unstructured==0.12.6
+unstructured-client==0.18.0
+unstructured-inference==0.7.23
+unstructured.pytesseract==0.3.12
+urllib3==1.26.18
+validators==0.22.0
+watchdog==3.0.0
+wcwidth==0.2.13
+wrapt==1.16.0
+yarl==1.9.4
+zipp==3.17.0
